# dummy-cmake-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configuration.h.in  main.cpp
